--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -37,3 +37,7 @@
 [[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "2.2.1"
+
+[[constraint]]
+  name = "github.com/radu-matei/go-autorest"
+  branch = "master"
